--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -15,7 +15,7 @@
                         <div class="card-header" style="width: 100%;">
                             <h4 class="my-0 font-weight-normal">{{ object_prod|title }}</h4>
                             <img src="{% mediapath object_prod.image %}" style="width: 100%;"/>
-                            <a class="btn btn-lg btn-block btn-outline-primary" href="/product/">Подробнее</a>
+                            <a class="btn btn-lg btn-block btn-outline-primary" href="/product/{{ object_prod.pk }}">Подробнее</a>
                         </div>
                     </div>
                 </div>
