--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 {% load static %}
 {% load my_tags %}
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,6 +14,7 @@
             <nav class="ms-5">
                 <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
                 <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
+                <a class="p-2 btn btn-outline-primary" href=" {% url 'blog:list' %}">Блог</a>
             </nav>
         </div>
         {% block  content %}
@@ -21,7 +22,7 @@
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
             <div class="row">
                 <div class="col-12 col-md">
-                    SkyStoreProduct
+                    StoreProduct
                     <small class="d-block mb-3 text-muted">&copy; 2023</small>
                 </div>
                 <div class="col-6 col-md">
@@ -37,7 +38,7 @@
                 <div class="col-6 col-md">
                     <h5>Дополнительно</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="#">Мы пишем</a></li>
+                        <li><a class="text-muted" href="{% url 'blog:list' %}">Мы пишем</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-md">
