--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -9,18 +9,20 @@
 
 <div class="container">
     <div class="row text-center">
-        <div class="col-3">
+        <div class="col-5">
             <div class="card mb-4 box-shadow">
                 <div class="card-header">
-                    <h4 class="my-3 font-weight-normal">{{ product.name}} {{product.description}}</h4>
+                    <h4 class="my-3 font-weight-normal">{{product}} </h4>
                 </div>
                 <div class="card-body">
                     <ul class="list-unstyled ">
-                        <img src="{% mediapath product.image %}" style="width: 80%;"/>
+                        <img src="{% mediapath product.image %}" style="width: 100%;"/>
+                        <li> {{product.description}} </li>
+                        <li> ____________________________ </li>
                         <li> {{product.price}} рублей за кг </li>
-                        <li> _____________________ </li>
+                        <li> ____________________________ </li>
                         <li> Информация актуальна на </li>
-                        <li> {{product.last_modified_date|default:'сегодняшний день'}}</li>
+                        <li> {{product.last_modified_date}}</li>
                     </ul>
                     <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
                 </div>
