--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -3,10 +3,13 @@
 {% block content %}
 {% load my_tags %}
 
-<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">StoreProduct</h1>
-    <p class="lead">StoreProduct - это отличный магазин продуктов</p>
-</div>
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4">StoreProduct</h1>
+        <p class="lead">StoreProduct - это отличный магазин продуктов</p>
+        <div class="col-5 mb-5">
+            <a class="btn btn-outline-primary" href=" {% url 'catalog:create' %} ">Добавить продукт</a>
+        </div>
+    </div>
 
 <div class="container">
     <div class="row text-center">
@@ -18,6 +21,8 @@
                             <img src="{% mediapath product.image %}" style="width: 100%;"/>
                             <p class="card-text">{{ product.description|truncatechars:100 }}</p>
                             <a class="btn btn-lg btn-block btn-outline-primary" href="/product/{{ product.pk }}">Подробнее</a>
+                            <a class="btn btn-outline-primary" href="{% url 'catalog:update' product.pk %}">Редактировать</a>
+                            <a class="btn btn-outline-primary" href="{% url 'catalog:delete' product.pk %}">Удалить</a>
                         </div>
                     </div>
                 </div>
