--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -12,6 +12,13 @@
         <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
             <h5 class="my-0 mr-md-auto font-weight-normal">StoreProduct</h5>
             <nav class="ms-5">
+                {% if user.is_authenticated %}
+            <a class="p-2 btn btn-outline-primary" href="{% url 'users:profile' %}">Профиль</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'users:logout' %}">Выйти</a>
+                {% else %}
+            <a class="p-2 btn btn-outline-primary" href="{% url 'users:login'%}">Войти</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'users:register'%}">Регистрация</a>
+                {% endif %}
                 <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
                 <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
                 <a class="p-2 btn btn-outline-primary" href=" {% url 'blog:list' %}">Блог</a>
